CURO-1 Aktueller Stand